--- a/gestaoacademica/WebContent/novoDiscip.html
+++ b/gestaoacademica/WebContent/novoDiscip.html
@@ -12,7 +12,7 @@
 	<form name = "frmDiscip" action="insertDiscip">
 		<table>
 			<tr>
-				<td><input type="text" name="nomediscplina" placeholder="Nome Disciplina" class=Caixa1></td>
+				<td><input type="text" name="nomedisciplina" placeholder="Nome Disciplina" class=Caixa1></td>
 			</tr>
 			<tr>
 				<td><input type="text" name="cargahoraria" placeholder="Carga Horária" class=Caixa1></td>
